# TeXMan

./: .gitignore  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  makefile  publish.sh
profiles/: test.profile
src/: help.rs  lib.rs  main.c  main.rs  parse_config.rs  spawn.rs
