[package]
name = "texman"
version = "0.1.1"
edition = "2021"
description = "TeXMan is a LaTeX template manager with the goal to be highly customizable."
authors = ["Dimitri Bonanni-Surprenant <bond2102@usherbrooke.ca>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"
toml = "0.7.4"
colored = "2.0.4"
clap = { version = "4.0", features = ["derive"] }
